# prime8

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml  pr-checks.yml
cogs/: auth.py  calendar.py  chat.py  downloader.py  github.py  github_notifications.py  gmail.py  notifications.py
migrations/: 003_memory_tables.sql
searxng/: settings.yml
services/: ai_service.py  analytics_service.py  cache_service.py  calendar_service.py  chat_tools.py  database_service.py  download_service.py  github_service.py  gmail_service.py  google_auth.py  llm_service.py  local_secret_service.py  memory_service.py  user_manager.py  vault_service.py
utils/: embeds.py  github_embeds.py  logger.py  metrics.py  pagination.py  time_helpers.py
