[project]
name = "prime8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.0",
    "colorlog>=6.10.1",
    "discord-py>=2.3.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "hvac>=2.4.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=3.3.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "supabase>=2.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "matplotlib>=3.9.0",
    "huggingface-hub>=0.24.0",
    "einops>=0.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM115"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
